<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VPNHotspot">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="Status"/>

            <EditText
                android:id="@+id/etPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="port, >= 1024"
                android:text="1081"
                android:maxLength="5"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:inputType="number"/>

            <CheckBox
                android:id="@+id/cbUseSystemProxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/use_system_proxy_as_next_socks_proxy"
                android:checked="true"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:backgroundTint="@color/colorPing"/>

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:backgroundTint="@color/red_color_picker"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/instruction1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_wi_fi_settings"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/instruction2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go_to_your_android_device_s_settings_menu_depending_on_your_device_this_might_be_accessed_through_an_icon_in_the_apps_menu_or_by_pulling_down_the_notification_bar_and_tapping_the_gear_icon"
                        app:layout_constraintTop_toBottomOf="@id/instruction1"
                        android:layout_marginTop="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/instruction3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_wi_fi_network"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/instruction2"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/instruction4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/under_the_wireless_amp_networ_amp_s_or_connections_section_find_and_tap_on_wi_fi_here_you_ll_see_a_list_of_available_networks_tap_the_wi_fi_network_you_re_connected_to_or_want_to_connect_to"
                        app:layout_constraintTop_toBottomOf="@id/instruction3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/instruction5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_proxy_settings"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/instruction4"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/instruction6"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inside_the_wi_fi_network_settings_look_for_an_option_called_proxy_or_advanced_settings_tap_on_it_and_select_manual_enter_the_proxy_hostname_and_port_number"
                        app:layout_constraintTop_toBottomOf="@id/instruction5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <TextView
                        android:id="@+id/ip"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_192_168_43_1"
                        app:layout_constraintTop_toBottomOf="@id/instruction6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <TextView
                        android:id="@+id/port"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ip"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
