<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <ScrollView
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollingCache="true">

        <LinearLayout
            android:orientation="vertical"
            android:padding="10.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">



            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                app:cardBackgroundColor="@color/navy_blue_alt"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="10.0sp"
                    android:paddingBottom="10.0sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="5.0sp"
                        android:paddingRight="5.0sp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0sp"
                        android:layout_marginBottom="10.0sp"
                        android:minHeight="50.0sp">

                        <View
                            android:layout_width="15.0sp"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:layout_width="50.0sp"
                            android:layout_height="50.0sp"
                            android:src="@drawable/icon"/>

                        <View
                            android:layout_width="15.0sp"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textStyle="bold"
                                android:textColor="#ff999999"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"/>

                            <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="#ff999999"
                                android:autoLink="web"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/v2ray_client"/>

                        </LinearLayout>

                    </LinearLayout>






                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0.0sp"
                android:layout_height="10.0sp"/>


            <androidx.cardview.widget.CardView
                android:visibility="visible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/navy_blue_alt"

                app:cardCornerRadius="10sp"
                 >

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="10.0sp"
                    android:paddingBottom="10.0sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15.0sp"
                        android:layout_marginBottom="10.0sp"
                        android:text="@string/about_the_app"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:autoLink="web"
                        android:textColor="#ff999999"
                        android:padding="5.0dip"
                        android:text="@string/welcome" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <View
                android:layout_width="0.0sp"
                android:layout_height="10.0sp"/>

            <androidx.cardview.widget.CardView
                android:visibility="visible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/navy_blue_alt"

                app:cardCornerRadius="10sp"
                app:cardElevation="2.0sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="10.0sp"
                    android:paddingBottom="10.0sp"

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15.0sp"
                        android:layout_marginBottom="10.0sp"
                        android:text="@string/developer"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:id="@+id/developer"
                         android:paddingLeft="5.0sp"
                        android:paddingRight="5.0sp"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50.0sp">

                        <View
                            android:layout_width="20.0sp"
                            android:layout_height="wrap_content"/>

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:layout_width="40.0sp"
                            android:layout_height="40.0sp"
                            app:srcCompat="@drawable/baseline_person_24"
                            app:tint="#ff999999"
                            android:contentDescription="TODO" />

                        <View
                            android:layout_width="20.0sp"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" Mrtinkelman"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="#f9f9f9" />

                            <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:autoLink="web"
                                android:textColor="#ff999999"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_developer"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0.0sp"
                android:layout_height="10.0sp"/>
            <androidx.cardview.widget.CardView
                android:visibility="visible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                 app:cardBackgroundColor="@color/navy_blue_alt"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="10.0sp"
                    android:paddingBottom="10.0sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold"
                        android:textColor="#ff999999"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15.0sp"
                        android:layout_marginBottom="10.0sp"
                        android:text="@string/special_thanks"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:id="@+id/developer2"
                        android:background="?selectableItemBackground"
                        android:paddingLeft="5.0sp"
                        android:paddingRight="5.0sp"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50.0sp">

                        <View
                            android:layout_width="20.0sp"
                            android:layout_height="wrap_content"/>

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:layout_width="40.0sp"
                            android:layout_height="40.0sp"
                            app:srcCompat="@drawable/baseline_person_24"
                            app:tint="#ff999999"
                            android:contentDescription="TODO" />

                        <View
                            android:layout_width="20.0sp"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="#f9f9f9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2dust"/>

                            <TextView
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:autoLink="web"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="https://github.com/2dust/v2rayNG/"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>

